fix the scrollbar on modal

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -49,6 +49,19 @@
 .Modal-body {
   margin: 1rem;
 }
+.Modal-body::-webkit-scrollbar {
+  width: 6px;
+}
+
+.Modal-body::-webkit-scrollbar-track {
+  background-color: #1c1c1c;
+  border-radius: 100rem;
+}
+
+.Modal-body::-webkit-scrollbar-thumb {
+  background-color: #949393;
+  border-radius: 100rem;
+}
 
 .Modal-title {
   text-align: left;
